# lwhlisp

./: .gitignore  Cargo.toml  README.md  launch.json
euler/: 1.lisp
lib/: lib.lisp
src/: atom.rs  env.rs  lib.rs  main.rs  parsing.rs
src/atom/: eval.rs
src/tests/: mod.rs
