[package]
name = "lwhlisp"
version = "0.12.2"
edition = "2021"
authors = ["Khaïs COLIN"]
default-run = "lwhlisp"

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = { version = "3.2.12", features = ["derive"] }
color-eyre = "0.6.1"
gc = { version = "0.4.1", features = ["derive"] }
rustyline = "9.1.2"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
